Geometry Nodes: Read after free by node tool for node tree #121696

Closed
opened 2024-05-11 20:11:11 +02:00 by Iliya Katushenock · 2 comments

System Information
Operating system: Windows-10-10.0.19045-SP0 64 Bits
Graphics card: NVIDIA GeForce GTX 1060 6GB/PCIe/SSE2 NVIDIA Corporation 4.6.0 NVIDIA 536.99

Blender Version
Broken: Latest main.
Worked: (newest version of Blender that worked as expected)

Short description of error
If you undoing renaming of node tree, node tool will show freed string of the name.

Exact steps for others to reproduce the error

  1. Create node tool tree.
  2. Save file.
  3. Add tree asset to assets catalog.
  4. Check name of the tree in 3D View header.
  5. Rename node tree in editor.
  6. Undo.
    Check the name of the tree in 3D View. In debug build there will be FFFF....
**System Information** Operating system: Windows-10-10.0.19045-SP0 64 Bits Graphics card: NVIDIA GeForce GTX 1060 6GB/PCIe/SSE2 NVIDIA Corporation 4.6.0 NVIDIA 536.99 **Blender Version** Broken: Latest main. Worked: (newest version of Blender that worked as expected) **Short description of error** If you undoing renaming of node tree, node tool will show freed string of the name. **Exact steps for others to reproduce the error** 1. Create node tool tree. 2. Save file. 3. Add tree asset to assets catalog. 4. Check name of the tree in 3D View header. 5. Rename node tree in editor. 6. Undo. Check the name of the tree in 3D View. In debug build there will be `FFFF...`.
Iliya Katushenock added the
Interest
Undo
label 2024-05-12 14:07:09 +02:00
Member

I was able to reproduce this bug (or something similar), but couldn't find a cause or fix yet.

I was able to reproduce this bug (or something similar), but couldn't find a cause or fix yet.
Jacques Lucke added
Interest
Asset System
Severity
High
and removed
Severity
Normal
labels 2024-06-15 17:52:16 +02:00
Member

This is what I was able to reproduce:

  1. Add attached asset library.
  2. Open Blender, open the Jacques menu in the 3D View header.
  3. Create a new file (ctrl+N).
  4. Open the same menu again -> crash/assert.

I assume it's the same issue, but I'm not 100% sure.

This is what I was able to reproduce: 1. Add attached asset library. 2. Open Blender, open the `Jacques` menu in the 3D View header. 3. Create a new file (ctrl+N). 4. Open the same menu again -> crash/assert. I assume it's the same issue, but I'm not 100% sure.
Hans Goudey added
Type
Bug
and removed
Type
Report
labels 2024-07-02 16:04:55 +02:00
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2024-07-08 15:11:02 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset System
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Viewport & EEVEE
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Asset Browser Project
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Module
Viewport & EEVEE
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Severity
High
Severity
Low
Severity
Normal
Severity
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#121696
No description provided.